Bug 311950 - after file-name search and another another tab is opened, the new tab can't close search
Summary: after file-name search and another another tab is opened, the new tab can't c...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: search (other bugs)
Version First Reported In: 2.0
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 329606 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-12-19 21:26 UTC by martien friedeman
Modified: 2014-03-28 17:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description martien friedeman 2012-12-19 21:26:44 UTC
Great file manager. Thank you!

Start a find.
Wait for the results to show.
Open another tab (control T).
The new tab shows the same results, and a 'quit searching' button.
Press that button. 
The search remains(!)

Reproducible: Always

Steps to Reproduce:
1.Start a find.
2.Wait for the results to show.
3.Open another tab (control T).
4. The new tab shows the same results, and a 'quit searching' button.
5. Press that button. 
6. Confirm that pressing it had no effect.

Actual Results:  
Search remains

Expected Results:  
Remove search
Comment 1 Emmanuel Pescosta 2012-12-20 17:32:25 UTC
Thanks for the bug report.

I can reproduce this bug in Dolphin 2.1.95 / KDE 4.9.95 and in Dolphin Git Master
Comment 2 Emmanuel Pescosta 2014-01-05 15:48:26 UTC
*** Bug 329606 has been marked as a duplicate of this bug. ***
Comment 3 Emmanuel Pescosta 2014-03-28 17:49:23 UTC
Git commit 54208a66a07a92af968a083a800666edc9e5756f by Emmanuel Pescosta.
Committed on 28/03/2014 at 17:48.
Pushed by emmanuelp into branch 'KDE/4.13'.

When you open a new tab while the search mode is enabled, the
newly opened tab also starts the same search (Because new tab is opened with
the current view url), but the search box is in read-only mode. So you cannot
close the search bar nor edit the search text.

This patch fixes this by parsing the search url. The value of the "search"
parameter is used as search text and the value of the "url" parameter is used
for the search path ("root" folder for the search when "Search from here" mode
is enabled).

In case of Baloo search urls, we use Baloo::Query::fromSearchUrl.

Removed everything related to read only mode in DolphinSearchBox, not needed
anymore.

REVIEW: 111968
FIXED-IN: 4.13.0

M  +6    -24   dolphin/src/dolphinviewcontainer.cpp
M  +109  -0    dolphin/src/search/dolphinfacetswidget.cpp
M  +8    -0    dolphin/src/search/dolphinfacetswidget.h
M  +47   -29   dolphin/src/search/dolphinsearchbox.cpp
M  +10   -13   dolphin/src/search/dolphinsearchbox.h

http://commits.kde.org/kde-baseapps/54208a66a07a92af968a083a800666edc9e5756f