src/search/dolphinfacetswidget.h
@@ -58,12 +58,20 @@ public:
 #ifdef HAVE_BALOO
     Baloo::Term ratingTerm() const;
     QString facetType() const;
+
+    bool isRatingTerm(const Baloo::Term& term) const;
+    void setRatingTerm(const Baloo::Term& term);
 #endif
+
+    void setFacetType(const QString& type);
 
 signals:
     void facetChanged();
 
 private:
+    void setRating(const int stars);
+    void setTimespan(const QDate& date);
+
     /**
      * @return New radiobutton which is connected to the
      *         slotFacedChanged() slot whenever it has
